# icse

./: .gitignore  REPRODUCTION_GUIDE.md  Readme.md  loc_batch_stats_tmp.csv  loc_batch_stats_tmp.py  rust_source_stats_out.csv  rust_source_stats_serde_out.csv  rust_source_stats_tmp.py  serde_loc_out.txt  serde_loc_stats_tmp.json  serde_loc_stats_tmp.py  实验复现说明.md
aggregate_scalarization_bench/: Cargo.toml  experiment_aggregate_scalarization_mir_llvm.py
aho-corasick/: experiment_aho_mir_llvm_hybrid.py
analysis/: README.txt  best_configs.py  best_configs_summary.csv
async_state_machine_bench/: Cargo.toml  experiment_async_state_machine_mir_llvm.py
bat/: experiment_bat_mir_llvm_hybrid.py
branch_cfg_bench/: Cargo.toml  experiment_cfg_mir_llvm_hybrid.py
eza/: experiment_eza_mir_llvm_hybrid.py
fast_image_resize/: experiment_fast_image_resize.py
hyper/: CHANGELOG.md  experiment_hyper_mir_llvm_hybrid.py
image/: experiment_image_mir_llvm_hybrid.py
iterator_pipeline_bench/: Cargo.toml  experiment_iterator_pipeline_mir_llvm_hybrid.py
loop_hoisting_bench/: Cargo.toml  experiment_loop_mir_llvm_hybrid.py  loop_test_microbenchmark_experiment_process.txt
ndarray/: Cargo.toml  README.rst
pass_filter/: combined_experiment_matrix.json  llvm_83_optimization_flags.csv  mir_20_optimization_passes.csv
quinn/: experiment_quinn_mir_llvm_hybrid.py
regex/: experiment_regex_mir_llvm_hybrid.py
ripgrep/: CHANGELOG.md  Cargo.toml  GUIDE.md  RELEASE-CHECKLIST.md  build.rs  rustfmt.toml  (+1 more)
ripgrep/fuzz/: Cargo.toml  README.md
ripgrep/fuzz/fuzz_targets/: fuzz_glob.rs
(+617 files in other folders)
